# jolideco

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  CODE_OF_CONDUCT.md  MANIFEST.in  README.rst  environment.yaml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci_tests.yml  release.yml
docs/: changelog.rst  conf.py  developer.rst  index.rst  references.bib  references.rst
docs/_static/css/: custom.css
docs/api/: core.rst  data.rst  index.rst  models.rst  priors.rst
docs/api/utils/: index.rst  torch.rst
docs/jolideco/: developer.rst  index.rst  references.rst
docs/jolideco/user/: index.rst
docs/user/: getting-started.rst  index.rst  installation.rst  overview.rst
examples/: README.rst  chandra-e0102-filament.py  fermi-vela-junior.py  first-steps.py  uniform-prior.py
jolideco/: __init__.py  _version.py  cli.py  conftest.py  core.py  loss.py  models.py  priors.py
jolideco/data/: core.py
jolideco/data/tests/: test_core.py
jolideco/models/: __init__.py  core.py  npred.py
jolideco/models/tests/: test_core.py  test_npred.py
jolideco/priors/: __init__.py  core.py  gmm.py  lira.py  patches.py  uniform.py
jolideco/priors/patches/: __init__.py  core.py  gmm.py  gmm_tree.py  train.py
jolideco/priors/patches/tests/: test_core.py  test_gmm.py
jolideco/priors/tests/: test_core.py  test_gmm.py  test_lira.py
jolideco/tests/: test_core.py  test_models.py
jolideco/utils/: io.py  misc.py  norms.py  numpy.py  plot.py  sympy.py  testing.py  torch.py
jolideco/utils/io/: __init__.py  asdf.py  fits.py  yaml.py
jolideco/utils/tests/: test_numpy.py  test_torch.py
licenses/: LICENSE.rst
paper/: paper.bib  paper.md
