[metadata]
name = jolideco
author = Axel Donath
author_email = axel.donath@cfa.harvard.edu
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = http://docs.astropy.org/projects/package-template/
description = A Python package for Poisson joint likelihood deconvolution
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = adonath/jolideco

[options]
zip_safe = False
packages = find:
python_requires = >=3.8
setup_requires = setuptools_scm
install_requires =
    pytorch
    numpy
    astropy


[options.extras_require]
all =
    matplotlib
test =
    pytest-astropy
docs =
    sphinx-astropy

[options.package_data]
jolideco = data/*

[tool:pytest]
testpaths = "jolideco" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    jolideco/_astropy_init*
    jolideco/conftest.py
    jolideco/*setup_package*
    jolideco/tests/*
    jolideco/*/tests/*
    jolideco/extern/*
    jolideco/version*
    */jolideco/_astropy_init*
    */jolideco/conftest.py
    */jolideco/*setup_package*
    */jolideco/tests/*
    */jolideco/*/tests/*
    */jolideco/extern/*
    */jolideco/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
